# local-hub

./: .gitignore  .gitmodules  .mise.toml  .release-please-manifest.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  codecov.yml  eslint.config.mjs  lefthook.yml  package.json  release-please-config.json  turbo.json
.claude/: settings.json
.claude/agent-memory/gardening-doc-gardener/: state.json
.claude/agent-memory/gardening-gardening-doc-gardener/: MEMORY.md  project_structure.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.please/: INDEX.md  config.yml
.please/docs/decisions/: index.md
.please/docs/knowledge/: product-guidelines.md  product.md  tech-stack.md  workflow.md
.please/docs/product-specs/: index.md
.please/docs/tracks/: index.md  tech-debt-tracker.md
.superset/: config.json
apps/web/: .env.example  CHANGELOG.md  next.config.ts  package.json  prisma.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/prisma/: schema.prisma
apps/web/public/: sw.js
apps/web/public/schemas/: icon-theme-data.schema.json  icon-theme-manifest.schema.json  theme-data.schema.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  manifest.ts
apps/web/src/components/: ai-command-content.tsx  command-menu.tsx  theme-toggle.tsx
apps/web/src/hooks/: use-click-outside.ts  use-infinite-scroll.ts  use-is-mobile.ts  use-readme.ts
apps/web/src/lib/: ai-auth.ts  ai-providers.ts  auth-client.ts  auth.ts  contributor-score.ts  db.ts  diff-preferences.ts  github-config.ts  github-scopes.ts  github-user-attachments.ts  github-utils.ts  github.ts  image-upload-r2.ts  image-upload.ts  inngest.ts  live-tick.ts  mutation-events.ts  pinned-repos.ts  readme-cache.ts  recent-views.ts  redis.ts  theme-script.ts  three-way-merge.ts  tiptap-mention.ts  user-profile-score.ts  (+2 more)
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: cache.rs  classify.rs  entity.rs  entity_cache.rs  error.rs  key.rs  lib.rs  main.rs  proxy.rs  server.rs  storage.rs  ttl.rs
crates/server/tests/: emulate.config.yaml  integration_test.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/local-hub/: package.json
(+225 files in other folders)
