[workspace]
resolver = "2"
members = [
  "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/pleaseai/local-hub"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
redb = "2"
http = "1"
tower = { version = "0.5", features = ["util"] }
anyhow = "1"
tempfile = "3"
