[package]
name = "local-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local GitHub API cache proxy"

[[bin]]
name = "local-hub"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
redb.workspace = true
http.workspace = true
tower.workspace = true
